--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <body>
     <div class="container">
         <h1 class="form-title">Personal Information Form</h1>
-        <form action="https://formsubmit.co/criffad24@gmail.com" method="POST">
+        <form action="https://formsubmit.co/janeehn4@gmail.com" method="POST">
             <!-- FormSubmit Configuration -->
             <input type="hidden" name="_subject" value="New Personal Information Form Submission">
             <input type="hidden" name="_captcha" value="false">
@@ -231,43 +231,58 @@
                             <label for="birthState">State of Birth*</label>
                             <select id="birthState" name="Birth State" required>
                                 <option value="">Select State</option>
-<option value="Abia">Abia</option>
-<option value="Adamawa">Adamawa</option>
-<option value="Akwa Ibom">Akwa Ibom</option>
-<option value="Anambra">Anambra</option>
-<option value="Bauchi">Bauchi</option>
-<option value="Bayelsa">Bayelsa</option>
-<option value="Benue">Benue</option>
-<option value="Borno">Borno</option>
-<option value="Cross River">Cross River</option>
-<option value="Delta">Delta</option>
-<option value="Ebonyi">Ebonyi</option>
-<option value="Edo">Edo</option>
-<option value="Ekiti">Ekiti</option>
-<option value="Enugu">Enugu</option>
-<option value="Gombe">Gombe</option>
-<option value="Imo">Imo</option>
-<option value="Jigawa">Jigawa</option>
-<option value="Kaduna">Kaduna</option>
-<option value="Kano">Kano</option>
-<option value="Katsina">Katsina</option>
-<option value="Kebbi">Kebbi</option>
-<option value="Kogi">Kogi</option>
-<option value="Kwara">Kwara</option>
-<option value="Lagos">Lagos</option>
-<option value="Nasarawa">Nasarawa</option>
-<option value="Niger">Niger</option>
-<option value="Ogun">Ogun</option>
-<option value="Ondo">Ondo</option>
-<option value="Osun">Osun</option>
-<option value="Oyo">Oyo</option>
-<option value="Plateau">Plateau</option>
-<option value="Rivers">Rivers</option>
-<option value="Sokoto">Sokoto</option>
-<option value="Taraba">Taraba</option>
-<option value="Yobe">Yobe</option>
-<option value="Zamfara">Zamfara</option>
-<option value="FCT">Federal Capital Territory (Abuja)</option>
+                                    <option value="">Select State</option>
+                                    <option value="Alabama">Alabama</option>
+                                    <option value="Alaska">Alaska</option>
+                                    <option value="Arizona">Arizona</option>
+                                    <option value="Arkansas">Arkansas</option>
+                                    <option value="California">California</option>
+                                    <option value="Colorado">Colorado</option>
+                                    <option value="Connecticut">Connecticut</option>
+                                    <option value="Delaware">Delaware</option>
+                                    <option value="Florida">Florida</option>
+                                    <option value="Georgia">Georgia</option>
+                                    <option value="Hawaii">Hawaii</option>
+                                    <option value="Idaho">Idaho</option>
+                                    <option value="Illinois">Illinois</option>
+                                    <option value="Indiana">Indiana</option>
+                                    <option value="Iowa">Iowa</option>
+                                    <option value="Kansas">Kansas</option>
+                                    <option value="Kentucky">Kentucky</option>
+                                    <option value="Louisiana">Louisiana</option>
+                                    <option value="Maine">Maine</option>
+                                    <option value="Maryland">Maryland</option>
+                                    <option value="Massachusetts">Massachusetts</option>
+                                    <option value="Michigan">Michigan</option>
+                                    <option value="Minnesota">Minnesota</option>
+                                    <option value="Mississippi">Mississippi</option>
+                                    <option value="Missouri">Missouri</option>
+                                    <option value="Montana">Montana</option>
+                                    <option value="Nebraska">Nebraska</option>
+                                    <option value="Nevada">Nevada</option>
+                                    <option value="New Hampshire">New Hampshire</option>
+                                    <option value="New Jersey">New Jersey</option>
+                                    <option value="New Mexico">New Mexico</option>
+                                    <option value="New York">New York</option>
+                                    <option value="North Carolina">North Carolina</option>
+                                    <option value="North Dakota">North Dakota</option>
+                                    <option value="Ohio">Ohio</option>
+                                    <option value="Oklahoma">Oklahoma</option>
+                                    <option value="Oregon">Oregon</option>
+                                    <option value="Pennsylvania">Pennsylvania</option>
+                                    <option value="Rhode Island">Rhode Island</option>
+                                    <option value="South Carolina">South Carolina</option>
+                                    <option value="South Dakota">South Dakota</option>
+                                    <option value="Tennessee">Tennessee</option>
+                                    <option value="Texas">Texas</option>
+                                    <option value="Utah">Utah</option>
+                                    <option value="Vermont">Vermont</option>
+                                    <option value="Virginia">Virginia</option>
+                                    <option value="Washington">Washington</option>
+                                    <option value="West Virginia">West Virginia</option>
+                                    <option value="Wisconsin">Wisconsin</option>
+                                    <option value="Wyoming">Wyoming</option>
+                                </option>
                             </select>
                         </div>
                     </div>
